# shajra-presentations

./: .gitignore  README.md  scala-typeclasses.org
haskell-mtl/: Makefile
haskell-mtl/presentation/: 01.whole_presentation.md  header.tex
haskell-simspace/: Makefile  haskell-simspace.tex  llmk.toml
haskell-simspace/images/: portal.dia  portal.eps  simspace.logo.color.eps
haskell-simspace/style/: beamercolorthemesimspace.sty  beamerinnerthemesimspace.sty  beamerouterthemesimspace.sty  beamerthemesimspace.sty
papers-recursionschemes/haskell/: Main.hs  shajra-learn-recursionschemes.cabal
papers-recursionschemes/scala/: Aliases.scala  FixLike.scala  Functor.scala  NatExample.scala  Schemes.scala  SignalExample.scala  StackExample.scala  build.sbt  package.scala  sbt
scala-effects/: build.sbt
scala-effects/src/main/tut/: scala-effects.html
scala-expressionproblem/: sbt
scala-expressionproblem/src/main/tut/: scala-expressionproblem.html
scala-free/: build.sbt
scala-free/src/main/tut/: scala-free.html
scala-haskell/part-haskell/: Makefile  README.md  lyah.md  point-to-local-slidy.sh
scala-haskell/part-scala/: build.sbt
scala-haskell/part-scala/project/: plugins.sbt
scala-haskell/src/main/tut/: scala-haskell.html
scala-mtl/: Makefile  build.sbt
scala-mtl/explore/src/main/scala/: BaseHierarchy.scala  (+2 more)
scala-parsers/: Parser.scala  build.sbt
scala-typeclasses/: scala-typeclasses.org
scala-validation/: Makefile  README.md  build.sbt
scala-validation/src/main/tut/: 01.intro.md  02.typeclasses.md  03.datatypes.md  99.conclusion.md  header.tex
(+55 files in other folders)
