name: shajra-learn-recursionschemes
version: 0.0.0.1
build-type: Simple
cabal-version: >=1.10

executable shajra-learn-recursionschemes
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base >= 4.7 && < 5, transformers
  default-language:    Haskell2010
